@@ -7,7 +7,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map.Entry;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.eclipse.core.runtime.ILog;
 import org.eclipse.core.runtime.Platform;
@@ -46,7 +45,7 @@ public class StudentArtemisController extends ArtemisController implements IStud
 
 	@Override
 	public List<String> getExerciseShortNamesFromExam(final String examTitle) {
-		return this.getExercisesFromStudentExam(examTitle).getExercises().stream().map(IExercise::getShortName).collect(Collectors.toList());
+		return this.getExercisesFromStudentExam(examTitle).getExercises().stream().map(IExercise::getShortName).toList();
 	}
 
 	@Override
